<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@color/primary_color"
    tools:context=".ui.activity.RegisterActivity">

    <ScrollView
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    style="@style/viewParent.headerText.NoMode"
                    android:textColor="@color/whiteTextColor"
                    android:text="@string/value_register"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_register_hero"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/parent"
                        app:helperTextTextColor="@color/cpb_red"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextName"
                            style="@style/modifiedEditText"
                            android:drawableStart="@drawable/baseline_account_circle_bbbb"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:textSize="16dp"
                            android:hint="Name"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        app:helperTextTextColor="@color/cpb_red"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextEmail"
                            style="@style/modifiedEditText"
                            android:drawableStart="@drawable/baseline_email_24"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textSize="16dp"
                            android:hint="@string/login_email_hint"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputMobile"
                        style="@style/parent"
                        app:prefixText="+855"
                        app:helperTextTextColor="@color/cpb_red"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextMobile"
                            style="@style/modifiedEditText"
                            android:drawableStart="@drawable/baseline_local_phone_24"
                            android:inputType="number"
                            android:maxLines="1"
                            android:textSize="16dp"
                            android:hint="Mobile Number"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/parent"
                        app:helperTextTextColor="@color/cpb_red"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextPassword"
                            style="@style/modifiedEditText"
                            android:hint="@string/login_password_hint"
                            android:drawableEnd="@drawable/baseline_remove_red_eye_24"
                            android:drawableStart="@drawable/baseline_lock_24"
                            android:maxLines="1"
                            android:enabled="true"
                            android:textSize="16dp"
                            android:maxLength="15"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputRetypePassword"
                        style="@style/parent"
                        app:helperTextTextColor="@color/cpb_red"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextRetypePassword"
                            style="@style/modifiedEditText"
                            android:hint="@string/login_Retypepassword_hint"
                            android:drawableEnd="@drawable/baseline_remove_red_eye_24"
                            android:drawableStart="@drawable/baseline_lock_24"
                            android:maxLines="1"
                            android:enabled="true"
                            android:maxLength="15"
                            android:textSize="16dp"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/cirRegisterButton"
                        android:text="@string/register"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        style="@style/loginButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin" />

                    <LinearLayout
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="New User?"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:textColor="@color/primary_color"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/Btn_login_now"
                            android:text="Login Now"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:textColor="@color/primary_color"
                            android:layout_marginStart="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

<!--                <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--                    android:id="@+id/fe_email"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:layout_margin="10dp"-->
<!--                    android:backgroundTint="@color/white"-->
<!--                    android:src="@drawable/email"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"/>-->

<!--                <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--                    android:id="@+id/fe_fb"-->
<!--                    android:src="@drawable/facebook"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:backgroundTint="@color/white"-->
<!--                    android:layout_margin="10dp"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"/>-->

<!--                <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--                    android:id="@+id/fe_twitter"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:layout_margin="10dp"-->
<!--                    android:backgroundTint="@color/white"-->
<!--                    android:src="@drawable/twitter"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"/>-->

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>